--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -1,7 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Strings used for basic parts of the launcher -->
+    <string name="favorite_apps">Yndlingsapps</string>
+    <string name="hidden_apps">Skjulte apps</string>
+    <!-- Strings used for actions within the app -->
     <string name="action_settings">Indstillinger</string>
-    <string name="action_settings_default">Indstil som standardstartapp</string>
+    <!-- Strings used for settings menus -->
+    <string name="settings_name">Indstillinger for Launcher</string>
+    <string name="settings_features_title">Funktioner</string>
+    <string name="settings_features_description">Forbedre din produktivitet.</string>
+    <string name="settings_look_feel_title">Se og føl</string>
+    <string name="settings_look_feel_description">Giv din startskærm et personligt præg.</string>
+    <string name="settings_advanced_title">Fremskreden</string>
+    <!-- Strings used for look And feel settings -->
+    <string name="look_feel_settings_title">Se og føl</string>
+    <!-- Strings used for features settings -->
+    <string name="features_settings_title">Funktioner</string>
+    <!-- Strings used for advanced settings -->
+    <string name="advanced_settings_title">Avancerede indstillinger</string>
+    <string name="advanced_settings_app_info">App info</string>
+    <string name="advanced_settings_app_info_description">%1$s</string>
+    <string name="advanced_settings_default">Skift standardstarter</string>
+    <string name="advanced_settings_restart_title">Genstart Launcher</string>
+    <string name="advanced_settings_restart_description">Har du prøvet at tænde og slukke for den?</string>
+    <string name="advanced_settings_backup_restore_title">Sikkerhedskopiering/gendannelse</string>
+    <string name="advanced_settings_backup_restore_description">Vær venligst forsigtig med hvad du ønsker dig?</string>
+    <string name="advanced_settings_backup_restore_backup">Sikkerhedskopieringsindstillinger</string>
+    <string name="advanced_settings_backup_restore_restore">Gendan præferencer</string>
+    <string name="advanced_settings_backup_restore_clear">Ryd præferencer</string>
+    <string name="advanced_settings_backup_restore_clear_title">Ryd præferencer</string>
+    <string name="advanced_settings_backup_restore_clear_description">Er du sikker på, at du vil gøre dette?</string>
+    <string name="advanced_settings_backup_restore_clear_yes">Ja</string>
+    <string name="advanced_settings_backup_restore_clear_no">Ingen</string>
+    <string name="advanced_settings_help_feedback_title">Hjælp og feedback</string>
+    <string name="advanced_settings_community_support_title">Fællesskabsstøtte</string>
+    <string name="advanced_settings_share_application_title">Del applikation</string>
+    <string name="advanced_settings_share_application_description">Forøg din oplevelse med %1$s! Få det nu på fDroid og se, hvad alle taler om!\n</string>
     <!-- Strings used for fragments for navigation -->
     <string name="home_fragment_label">Hjem Fragment</string>
     <string name="draw_fragment_label">Tegn Fragment</string>
@@ -25,18 +59,12 @@
     <string name="bottom_dialog_remove_to_unlock">Lås App Op</string>
     <string name="bottom_dialog_app_info">App-info</string>
     <string name="bottom_dialog_app_uninstall">Afinstaller App</string>
-    <string name="settings_name">Indstillinger for Launcher</string>
-    <string name="settings_version">%1$s Version: %2$s</string>
     <string name="settings_widgets_name">Indstillinger for Widgets</string>
     <string name="settings_title_home_display_preferences">Visning</string>
     <string name="settings_title_home_behavior_preferences">Adfærd</string>
     <string name="settings_title_home_appearance_preferences">Udseende</string>
-    <string name="settings_title_date_style">Datostil</string>
-    <string name="settings_title_time_style">Tidsstil</string>
-    <string name="settings_title_app_manager">App Administrer</string>
     <string name="settings_title_gestures">Bevægelser</string>
     <string name="settings_title_miscellaneous">Diverse</string>
-    <string name="settings_title_backups">Sikkerhedskopier</string>
     <string name="settings_title_others">Andre</string>
     <string name="settings_display_status_bar">Vis Statuslinje</string>
     <string name="settings_display_date">Vis Dato</string>
@@ -53,13 +81,8 @@
     <string name="settings_appearance_alignment_title">Justering</string>
     <string name="settings_appearance_padding_title">Afstand</string>
     <string name="settings_appearance_wallpaper">Brugerdefineret Baggrund</string>
-    <string name="settings_appearance_home_date_alignment">Datojustering</string>
-    <string name="settings_appearance_home_time_alignment">Tidsjustering</string>
-    <string name="settings_appearance_home_app_alignment">Hjem app justering</string>
-    <string name="appearance_bottom_dialog_text_size_title">Størrelse</string>
     <string name="appearance_bottom_dialog_text_color_title">Farve</string>
     <string name="appearance_bottom_dialog_alignment_title">Justering</string>
-    <string name="appearance_bottom_dialog_padding_title">Polstring</string>
     <string name="appearance_bottom_dialog_desc_date">Dato\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_time">Tid\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_app">App\u0020:\u0020</string>
@@ -67,9 +90,6 @@
     <string name="appearance_bottom_dialog_desc_battery">Batteri\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_widget_background">Widget-baggrund\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_widget_text">Widget-tekst\u0020:\u0020</string>
-    <string name="settings_manager_favorite">Favoritapps</string>
-    <string name="settings_manager_hidden">Skjulte Apps</string>
-    <string name="settings_select_wallpaper">Vælg Baggrund</string>
     <string name="settings_double_tap">Dobbelttryk</string>
     <string name="settings_swipe_up">Stryg Op</string>
     <string name="settings_swipe_down">Stryg Ned</string>
@@ -79,12 +99,6 @@
     <string name="settings_search_engine">Søgemaskine</string>
     <string name="settings_select_launcher_font">Vælg en Skrifttypefamilie</string>
     <string name="settings_launcher_font">Skrifttype</string>
-    <string name="settings_others_share">Del</string>
-    <string name="settings_others_feedback">Feedback</string>
-    <string name="settings_others_github">Github</string>
-    <string name="settings_backups_backup">Sikkerhedskopiér Præferencer</string>
-    <string name="settings_backups_clear">Ryd Præferencer</string>
-    <string name="settings_backups_restore">Gendan Præferencer</string>
     <string name="settings_reload_app_backup">Præferencer sikkerhedskopieret.</string>
     <string name="settings_reload_app_restore">Præferencer gendannet. Genstarter.</string>
     <string name="settings_actions_open_app">Åbn App</string>
@@ -109,16 +123,16 @@
     <string name="authentication_succeeded">Godkendelse Lykkedes</string>
     <string name="authentication_failed">Godkendelse Mislykkedes</string>
     <string name="authentication_error">Godkendelsesfejl: %1$s(kode %2$d)</string>
-    <string name="bottom_alignment_star">Stjerne</string>
+    <string name="bottom_alignment_start">Stjerne</string>
     <string name="bottom_alignment_center">Centrum</string>
     <string name="bottom_alignment_end">Ende</string>
     <string name="accessibility_settings_title">Indstillinger for tilgængelighed</string>
     <string name="accessibility_settings_enable">Aktivér</string>
     <string name="accessibility_settings_disable">Deaktiver</string>
     <string name="accessibility_service_name">Easy Launcher Actions Service</string>
-    <string name="accessibility_service_desc">Slå tilgængelighedstjenesten til for at bruge dobbelttryk for at låse-funktionen i Easy Launcher.\n\nDenne tilladelse bruges kun til at slukke din skærm. Vores tilgængelighedstjeneste indsamler eller deler ingen data.</string>
-    <string name="admin_permission_message">Easy launcher lover at bruge låseskærmens tilladelse ansvarligt. Easy launcher indsamler eller deler ingen data.</string>
-    <string name="search_engine">Søgemaskine</string>
+    <string name="accessibility_service_desc">Slå tilgængelighedstjenesten til for at bruge dobbelttryk for at låse-funktionen i Easy Launcher.\n\nDenne tilladelse bruges kun til at slukke din skærm. Vores
+        tilgængelighedstjeneste indsamler eller deler ingen data.</string>
+    <string name="search_default">Misligholdelse</string>
     <string name="search_google">Google</string>
     <string name="search_yahoo">Yahoo</string>
     <string name="search_duckduckgo">DuckDuckGo</string>
