--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -1,7 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Strings used for basic parts of the launcher -->
+    <string name="favorite_apps">App preferite</string>
+    <string name="hidden_apps">App nascoste</string>
+    <!-- Strings used for actions within the app -->
     <string name="action_settings">Impostazioni</string>
-    <string name="action_settings_default">Imposta come launcher predefinito</string>
+    <!-- Strings used for settings menus -->
+    <string name="settings_name">Impostazioni di avvio</string>
+    <string name="settings_features_title">Caratteristiche</string>
+    <string name="settings_features_description">Migliora la tua produttività.</string>
+    <string name="settings_look_feel_title">Aspetto e sensazione</string>
+    <string name="settings_look_feel_description">Dai un tocco personale alla tua schermata iniziale.</string>
+    <string name="settings_advanced_title">Avanzato</string>
+    <!-- Strings used for look And feel settings -->
+    <string name="look_feel_settings_title">Aspetto e sensazione</string>
+    <!-- Strings used for features settings -->
+    <string name="features_settings_title">Caratteristiche</string>
+    <!-- Strings used for advanced settings -->
+    <string name="advanced_settings_title">Impostazioni avanzate</string>
+    <string name="advanced_settings_app_info">Informazioni sull\'app</string>
+    <string name="advanced_settings_app_info_description">%1$s</string>
+    <string name="advanced_settings_default">Cambia il launcher predefinito</string>
+    <string name="advanced_settings_restart_title">Riavvia Launcher</string>
+    <string name="advanced_settings_restart_description">Hai provato ad accenderlo e spegnerlo?</string>
+    <string name="advanced_settings_backup_restore_title">Backup/Ripristino</string>
+    <string name="advanced_settings_backup_restore_description">Per favore, fai attenzione a ciò che desideri.</string>
+    <string name="advanced_settings_backup_restore_backup">Preferenze di backup</string>
+    <string name="advanced_settings_backup_restore_restore">Ripristina preferenze</string>
+    <string name="advanced_settings_backup_restore_clear">Cancella preferenze</string>
+    <string name="advanced_settings_backup_restore_clear_title">Cancella preferenze</string>
+    <string name="advanced_settings_backup_restore_clear_description">Sei sicuro di volerlo fare?</string>
+    <string name="advanced_settings_backup_restore_clear_yes">SÌ</string>
+    <string name="advanced_settings_backup_restore_clear_no">NO</string>
+    <string name="advanced_settings_help_feedback_title">Aiuto e feedback</string>
+    <string name="advanced_settings_community_support_title">Supporto della comunità</string>
+    <string name="advanced_settings_share_application_title">Condividi applicazione</string>
+    <string name="advanced_settings_share_application_description">Migliora la tua esperienza con %1$s! Scaricalo ora su fDroid e scopri di cosa parlano tutti!\n</string>
     <!-- Strings used for fragments for navigation -->
     <string name="home_fragment_label">Frammento domestico</string>
     <string name="draw_fragment_label">Disegna il frammento</string>
@@ -25,18 +59,12 @@
     <string name="bottom_dialog_remove_to_unlock">Sblocca l\'app</string>
     <string name="bottom_dialog_app_info">Informazioni sull\'app</string>
     <string name="bottom_dialog_app_uninstall">Disinstallare l\'app</string>
-    <string name="settings_name">Impostazioni di avvio</string>
-    <string name="settings_version">%1$s Versione: %2$s</string>
     <string name="settings_widgets_name">Impostazioni dei widget</string>
     <string name="settings_title_home_display_preferences">Schermo</string>
     <string name="settings_title_home_behavior_preferences">Comportamento</string>
     <string name="settings_title_home_appearance_preferences">Aspetto</string>
-    <string name="settings_title_date_style">Stile data</string>
-    <string name="settings_title_time_style">Stile temporale</string>
-    <string name="settings_title_app_manager">Gestione app</string>
     <string name="settings_title_gestures">Gesti</string>
     <string name="settings_title_miscellaneous">Varie</string>
-    <string name="settings_title_backups">Backup</string>
     <string name="settings_title_others">Altri</string>
     <string name="settings_display_status_bar">Mostra barra di stato</string>
     <string name="settings_display_date">Mostra data</string>
@@ -53,13 +81,8 @@
     <string name="settings_appearance_alignment_title">Allineamento</string>
     <string name="settings_appearance_padding_title">Imbottitura</string>
     <string name="settings_appearance_wallpaper">Carta da parati personalizzata</string>
-    <string name="settings_appearance_home_date_alignment">Allineamento della data</string>
-    <string name="settings_appearance_home_time_alignment">Allineamento temporale</string>
-    <string name="settings_appearance_home_app_alignment">Allineamento dell\'app domestica</string>
-    <string name="appearance_bottom_dialog_text_size_title">Misurare</string>
     <string name="appearance_bottom_dialog_text_color_title">Colore</string>
     <string name="appearance_bottom_dialog_alignment_title">Allineamento</string>
-    <string name="appearance_bottom_dialog_padding_title">Imbottitura</string>
     <string name="appearance_bottom_dialog_desc_date">Data\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_time">Orario\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_app">Applicazione\u0020:\u0020</string>
@@ -67,9 +90,6 @@
     <string name="appearance_bottom_dialog_desc_battery">Batteria\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_widget_background">Sfondo widget\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_widget_text">Testo widget\u0020:\u0020</string>
-    <string name="settings_manager_favorite">App preferite</string>
-    <string name="settings_manager_hidden">App nascoste</string>
-    <string name="settings_select_wallpaper">Seleziona Sfondo</string>
     <string name="settings_double_tap">Doppio tocco</string>
     <string name="settings_swipe_up">Scorrere verso l\'alto</string>
     <string name="settings_swipe_down">Scorri verso il basso</string>
@@ -79,12 +99,6 @@
     <string name="settings_search_engine">Motore di ricerca</string>
     <string name="settings_select_launcher_font">Seleziona una famiglia di caratteri</string>
     <string name="settings_launcher_font">Famiglia di font</string>
-    <string name="settings_others_share">Condividere</string>
-    <string name="settings_others_feedback">Feedback</string>
-    <string name="settings_others_github">Github</string>
-    <string name="settings_backups_backup">Preferenze di backup</string>
-    <string name="settings_backups_clear">Cancella preferenze</string>
-    <string name="settings_backups_restore">Ripristina preferenze</string>
     <string name="settings_reload_app_backup">Backup delle preferenze.</string>
     <string name="settings_reload_app_restore">Preferenze ripristinate. Riavvio.</string>
     <string name="settings_actions_open_app">Apri l\'app</string>
@@ -109,16 +123,16 @@
     <string name="authentication_succeeded">Autenticazione riuscita</string>
     <string name="authentication_failed">Autenticazione fallita</string>
     <string name="authentication_error">Errore di autenticazione: %1$s(codice %2$d)</string>
-    <string name="bottom_alignment_star">Stella</string>
+    <string name="bottom_alignment_start">Stella</string>
     <string name="bottom_alignment_center">Centro</string>
     <string name="bottom_alignment_end">FINE</string>
     <string name="accessibility_settings_title">Impostazioni di accessibilità</string>
     <string name="accessibility_settings_enable">Abilitare</string>
     <string name="accessibility_settings_disable">disattivare</string>
     <string name="accessibility_service_name">Servizio azioni Easy Launcher</string>
-    <string name="accessibility_service_desc">Attiva il servizio di accessibilità per utilizzare il doppio tocco per bloccare la funzione in Easy Launcher.\n\nQuesta autorizzazione viene utilizzata solo per spegnere lo schermo. Il nostro servizio di accessibilità non raccoglie né condivide alcun dato.</string>
-    <string name="admin_permission_message">Easy Launcher promette di utilizzare l\'autorizzazione della schermata di blocco in modo responsabile. Easy Launcher non raccoglie né condivide alcun dato.</string>
-    <string name="search_engine">Motore di ricerca</string>
+    <string name="accessibility_service_desc">Attiva il servizio di accessibilità per usare la funzione \"doppio tocco per bloccare\" in Easy Launcher.\n\nQuesta autorizzazione viene utilizzata solo per spegnere lo schermo. Il nostro servizio di accessibilità
+        non raccoglie o condivide alcun dato.</string>
+    <string name="search_default">Predefinito</string>
     <string name="search_google">Google</string>
     <string name="search_yahoo">Yahoo</string>
     <string name="search_duckduckgo">DuckDuckGo</string>
