--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -1,7 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Strings used for basic parts of the launcher -->
+    <string name="favorite_apps">Улюблені програми</string>
+    <string name="hidden_apps">Приховані програми</string>
+    <!-- Strings used for actions within the app -->
     <string name="action_settings">Налаштування</string>
-    <string name="action_settings_default">Встановити як програму запуску за умовчанням</string>
+    <!-- Strings used for settings menus -->
+    <string name="settings_name">Налаштування програми запуску</string>
+    <string name="settings_features_title">Особливості</string>
+    <string name="settings_features_description">Підвищте свою продуктивність.</string>
+    <string name="settings_look_feel_title">Подивіться і відчуйте</string>
+    <string name="settings_look_feel_description">Надайте своєму домашньому екрану індивідуальності.</string>
+    <string name="settings_advanced_title">Просунутий</string>
+    <!-- Strings used for look And feel settings -->
+    <string name="look_feel_settings_title">Дивись і відчувай</string>
+    <!-- Strings used for features settings -->
+    <string name="features_settings_title">Особливості</string>
+    <!-- Strings used for advanced settings -->
+    <string name="advanced_settings_title">Розширені налаштування</string>
+    <string name="advanced_settings_app_info">Інформація про додаток</string>
+    <string name="advanced_settings_app_info_description">%1$s</string>
+    <string name="advanced_settings_default">Змінити панель запуску за умовчанням</string>
+    <string name="advanced_settings_restart_title">Перезапустіть програму запуску</string>
+    <string name="advanced_settings_restart_description">Ви пробували його вмикати та вимикати?</string>
+    <string name="advanced_settings_backup_restore_title">Резервне копіювання/відновлення</string>
+    <string name="advanced_settings_backup_restore_description">Будь ласка, будьте обережні, чого ви бажаєте?</string>
+    <string name="advanced_settings_backup_restore_backup">Налаштування резервного копіювання</string>
+    <string name="advanced_settings_backup_restore_restore">Відновити налаштування</string>
+    <string name="advanced_settings_backup_restore_clear">Очистити налаштування</string>
+    <string name="advanced_settings_backup_restore_clear_title">Очистити налаштування</string>
+    <string name="advanced_settings_backup_restore_clear_description">Ви впевнені, що хочете це зробити?</string>
+    <string name="advanced_settings_backup_restore_clear_yes">так</string>
+    <string name="advanced_settings_backup_restore_clear_no">немає</string>
+    <string name="advanced_settings_help_feedback_title">Довідка та відгук</string>
+    <string name="advanced_settings_community_support_title">Підтримка спільноти</string>
+    <string name="advanced_settings_share_application_title">Поділитися програмою</string>
+    <string name="advanced_settings_share_application_description">Покращуйте свої враження від %1$s! Завантажте його зараз на fDroid і подивіться, про що всі говорять!\n</string>
     <!-- Strings used for fragments for navigation -->
     <string name="home_fragment_label">Домашній Фрагмент</string>
     <string name="draw_fragment_label">Намалювати фрагмент</string>
@@ -25,18 +59,12 @@
     <string name="bottom_dialog_remove_to_unlock">Розблокувати додаток</string>
     <string name="bottom_dialog_app_info">Інформація про додаток</string>
     <string name="bottom_dialog_app_uninstall">Видалити додаток</string>
-    <string name="settings_name">Налаштування програми запуску</string>
-    <string name="settings_version">%1$s Версія: %2$s</string>
     <string name="settings_widgets_name">Налаштування віджетів</string>
     <string name="settings_title_home_display_preferences">Дисплей</string>
     <string name="settings_title_home_behavior_preferences">Поведінка</string>
     <string name="settings_title_home_appearance_preferences">Зовнішній вигляд</string>
-    <string name="settings_title_date_style">Стиль дати</string>
-    <string name="settings_title_time_style">Стиль часу</string>
-    <string name="settings_title_app_manager">Керування додатком</string>
     <string name="settings_title_gestures">Жести</string>
     <string name="settings_title_miscellaneous">Різне</string>
-    <string name="settings_title_backups">Резервні копії</string>
     <string name="settings_title_others">інші</string>
     <string name="settings_display_status_bar">Показати рядок стану</string>
     <string name="settings_display_date">Показати дату</string>
@@ -53,13 +81,8 @@
     <string name="settings_appearance_alignment_title">Вирівнювання</string>
     <string name="settings_appearance_padding_title">Підкладка</string>
     <string name="settings_appearance_wallpaper">Шпалери на замовлення</string>
-    <string name="settings_appearance_home_date_alignment">Вирівнювання дати</string>
-    <string name="settings_appearance_home_time_alignment">Вирівнювання часу</string>
-    <string name="settings_appearance_home_app_alignment">Home App Alignment</string>
-    <string name="appearance_bottom_dialog_text_size_title">Розмір</string>
     <string name="appearance_bottom_dialog_text_color_title">Колір</string>
     <string name="appearance_bottom_dialog_alignment_title">Вирівнювання</string>
-    <string name="appearance_bottom_dialog_padding_title">Підкладка</string>
     <string name="appearance_bottom_dialog_desc_date">Дата\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_time">Час\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_app">Додаток\u0020:\u0020</string>
@@ -67,9 +90,6 @@
     <string name="appearance_bottom_dialog_desc_battery">Акумулятор\u0020:\u0020 </string>
     <string name="appearance_bottom_dialog_desc_widget_background">Фон віджета\u0020:\u0020</string>
     <string name="appearance_bottom_dialog_desc_widget_text">Текст віджета\u0020:\u0020</string>
-    <string name="settings_manager_favorite">Улюблені програми</string>
-    <string name="settings_manager_hidden">Приховані програми</string>
-    <string name="settings_select_wallpaper">Виберіть Шпалери</string>
     <string name="settings_double_tap">Двічі натисніть</string>
     <string name="settings_swipe_up">Проведіть пальцем вгору</string>
     <string name="settings_swipe_down">Проведіть пальцем вниз</string>
@@ -79,12 +99,6 @@
     <string name="settings_search_engine">Пошукова система</string>
     <string name="settings_select_launcher_font">Виберіть сімейство шрифтів</string>
     <string name="settings_launcher_font">Сімейство шрифтів</string>
-    <string name="settings_others_share">Поділіться</string>
-    <string name="settings_others_feedback">Зворотній зв\'язок</string>
-    <string name="settings_others_github">Github</string>
-    <string name="settings_backups_backup">Налаштування резервного копіювання</string>
-    <string name="settings_backups_clear">Очистити налаштування</string>
-    <string name="settings_backups_restore">Відновити налаштування</string>
     <string name="settings_reload_app_backup">Налаштування створено.</string>
     <string name="settings_reload_app_restore">Налаштування відновлено. Перезапуск.</string>
     <string name="settings_actions_open_app">Відкрийте додаток</string>
@@ -109,16 +123,16 @@
     <string name="authentication_succeeded">Автентифікація успішна</string>
     <string name="authentication_failed">Помилка автентифікації</string>
     <string name="authentication_error">Помилка автентифікації: %1$s(код %2$d)</string>
-    <string name="bottom_alignment_star">зірка</string>
+    <string name="bottom_alignment_start">зірка</string>
     <string name="bottom_alignment_center">центр</string>
     <string name="bottom_alignment_end">Кінець</string>
     <string name="accessibility_settings_title">Налаштування доступності</string>
     <string name="accessibility_settings_enable">Увімкнути</string>
     <string name="accessibility_settings_disable">Вимкнути</string>
     <string name="accessibility_service_name">Служба дій Easy Launcher</string>
-    <string name="accessibility_service_desc">Будь ласка, увімкніть службу доступності, щоб використовувати подвійне торкання для блокування функції в Easy Launcher.\n\nЦей дозвіл використовується лише для вимкнення вашого екрана. Наша служба доступності не збирає та не надає жодних даних.</string>
-    <string name="admin_permission_message">Easy launcher обіцяє відповідально використовувати дозвіл блокування екрана. Easy launcher не збирає та не передає жодних даних.</string>
-    <string name="search_engine">Пошукова система</string>
+    <string name="accessibility_service_desc">Увімкніть службу доступності, щоб використовувати подвійне торкання для блокування функції в Easy Launcher.\n\nЦей дозвіл використовується лише для вимкнення екрана. Наша
+        служба доступності не збирає та не передає жодних даних.</string>
+    <string name="search_default">За замовчуванням</string>
     <string name="search_google">Google</string>
     <string name="search_yahoo">Yahoo</string>
     <string name="search_duckduckgo">DuckDuckGo</string>
